properly check if diff command can be started for swap file diffing

avoids that writing to failed-to-start process leads to segfault

BUG: 389639